Fix Java version parsing, also supporting Java 17 (#680)
Fixes #677

# Conflicts:
#	micronaut-maven-integration-tests/src/it/deploy/Dockerfile.java11
#	micronaut-maven-integration-tests/src/it/deploy/Dockerfile.java17
#	micronaut-maven-integration-tests/src/it/dockerfile-docker-oracle-function/verify.groovy
#	micronaut-maven-jib-integration/src/main/java/io/micronaut/maven/jib/JibMicronautExtension.java
#	pom.xml
#	src/it/dockerfile-docker-oracle-function/Dockerfile.java8