@@ -23,8 +23,6 @@ import com.google.cloud.tools.jib.plugins.extension.ExtensionLogger;
 import io.micronaut.core.util.StringUtils;
 import io.micronaut.maven.core.MicronautRuntime;
 import io.micronaut.maven.services.ApplicationConfigurationService;
-import org.apache.maven.artifact.versioning.ArtifactVersion;
-import org.apache.maven.artifact.versioning.DefaultArtifactVersion;
 
 import java.util.*;
 
@@ -81,7 +79,8 @@ public class JibMicronautExtension implements JibMavenPluginExtension<Void> {
                 if (cmd.isEmpty()) {
                     cmd = Collections.singletonList("io.micronaut.oraclecloud.function.http.HttpFunction::handleRequest");
                 }
-                builder.setBaseImage("fnproject/fn-java-fdk:" + determineProjectFnVersion())
+                String projectFnVersion = determineProjectFnVersion(System.getProperty("java.version"));
+                builder.setBaseImage("fnproject/fn-java-fdk:" + projectFnVersion)
                         .setWorkingDirectory(AbsoluteUnixPath.get(jibConfigurationService.getWorkingDirectory().orElse("/function")))
                         .setEntrypoint(buildProjectFnEntrypoint())
                         .setCmd(cmd);
@@ -101,13 +100,10 @@ public class JibMicronautExtension implements JibMavenPluginExtension<Void> {
     public static List<String> buildProjectFnEntrypoint() {
         List<String> entrypoint = new ArrayList<>(9);
         entrypoint.add("/usr/java/latest/bin/java");
-        entrypoint.add("java");
-        entrypoint.add("-XX:+UnlockExperimentalVMOptions");
-        entrypoint.add("-XX:+UseCGroupMemoryLimitForHeap");
         entrypoint.add("-XX:-UsePerfData");
-        entrypoint.add("-XX:MaxRAMFraction=2");
         entrypoint.add("-XX:+UseSerialGC");
         entrypoint.add("-Xshare:on");
+        entrypoint.add("-Djava.awt.headless=true");
         entrypoint.add("-Djava.library.path=/function/runtime/lib");
         entrypoint.add("-cp");
         entrypoint.add("/function/app/classes:/function/app/libs/*:/function/app/resources:/function/runtime/*");
@@ -115,9 +111,9 @@ public class JibMicronautExtension implements JibMavenPluginExtension<Void> {
         return entrypoint;
     }
 
-    public static String determineProjectFnVersion() {
-        ArtifactVersion javaVersion = new DefaultArtifactVersion(System.getProperty("java.version"));
-        if (javaVersion.getMajorVersion() >= 17) {
+    public static String determineProjectFnVersion(String javaVersion) {
+        int majorVersion = Integer.parseInt(javaVersion.split("\\.")[0]);
+        if (majorVersion >= 17) {
             return "jre17-latest";
         } else {
             return LATEST_TAG;
